Fix for bug 74328, removing O(n^2) algorithm from ContentAppended. This saves time on big pages. r=waterson sr=jst